@@ -2,6 +2,7 @@ package simple;
 
 import cuke4duke.*;
 import cuke4duke.annotation.EN.*;
+import cuke4duke.annotation.Pending;
 
 import static org.junit.Assert.assertEquals;
 
